--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 h3{text-align: center;}
                 </style>
         <fontsize="100">
-         <h1>    "HackTech" </h1>
+         <h1>    "Thalaivar Shiva" </h1>
         </fontsize>
     </head>
 <body>
