--- a/surya project 2.html
+++ b/surya project 2.html
@@ -7,7 +7,7 @@
     </title>
     <link rel="icon" type="png" href="csk.jpeg">
     <style>
-       body{background-image:url("csk2.jpeg")}
+       body{background-image:url("images/csk2.jpeg")}
     table, th, td {
         border:5px solid black;
       text-align: center;
@@ -41,7 +41,7 @@
           <td> [  CAPTAIN  ]MS.DHONI</td>
           <td>41</td>
           <td>WICKET KEEPER "BATTER"</td>
-          <td><img src ="dhoni.png" height="200px" width="200px"></td>
+          <td><img src ="images/dhoni.png" height="200px" width="200px"></td>
        </tr>
 
        <tr>
@@ -50,7 +50,7 @@
         <td>RAVINDRA JADEJA</td>
         <td>34</td>
         <td>BOWLING "ALL ROUNDER"</td>
-        <td><img src ="jaddu.png" height="200px" width="200px"></td>
+        <td><img src ="images/jaddu.png" height="200px" width="200px"></td>
        </tr>
 
         <td>3</td>
@@ -58,7 +58,7 @@
         <td>RUTURAJ GAIKWAD</td>
         <td>26</td>
         <td>TOP ORDER BATTER</td>
-        <td><img src ="ruthuraj.png" height="200px" width="200"></td>
+        <td><img src ="images/ruthuraj.png" height="200px" width="200"></td>
        </tr>
 
        <tr>
@@ -67,7 +67,7 @@
         <td>BEN STOKS</td>
         <td>31</td>
         <td>BATTING "ALL ROUNDER"</td>
-        <td><img src ="stok.png" height="200px" width="200px"></td>
+        <td><img src ="images/stok.png" height="200px" width="200px"></td>
         </tr>
 
         <tr>
@@ -76,7 +76,7 @@
         <td>AMBATI RAYUDU</td>
         <td>33</td>
         <td>MIDDLE ORDER BATTER</td>
-        <td><img src ="Ambati-Rayudu-.png" height="200px" width="200px"></td>
+        <td><img src ="images/Ambati-Rayudu-.png" height="200px" width="200px"></td>
         </tr>
 
         <tr>
@@ -85,7 +85,7 @@
         <td>SHIVAM DUBE</td>
         <td>29</td>
         <td>BOWLING "ALL ROUNDER"</td>
-        <td><img src ="dube.png" height="200px" width="200px"></td>
+        <td><img src ="images/dube.png" height="200px" width="200px"></td>
         </tr>
 
         <tr>
@@ -94,7 +94,7 @@
         <td>AJINKYA RAHANE</td>
         <td>34</td>
         <td>TOP ORDER BATTER</td>
-        <td><img src ="rahane.png" height="200px" width="200px"></td>
+        <td><img src ="images/rahane.png" height="200px" width="200px"></td>
         </tr>
 
         <tr>
@@ -103,7 +103,7 @@
           <td>DEVON CONWAY</td>
           <td>31</td>
           <td>WICKET KEEPER "BATTER"</td>
-          <td><img src ="convey.png" height="200px" width="200px"></td>
+          <td><img src ="images/convey.png" height="200px" width="200px"></td>
         </tr>
 
         <tr>
@@ -112,7 +112,7 @@
           <td>DEEPAK CHAHAR</td>
           <td>30</td>
           <td>BOWLER</td>
-          <td><img src ="chahar.png" height="200px" width="200px"></td>
+          <td><img src ="images/chahar.png" height="200px" width="200px"></td>
         </tr>
         
         <tr>
@@ -121,7 +121,7 @@
           <td>MAHEESH THEEKSHANA</td>
           <td>22</td>
           <td>BOWER</td>
-          <td><img src ="shana.jpeg" height="200px" width="250px"></td>
+          <td><img src ="images/maheas.png" height="200px" width="200px"></td>
           </tr>
 
           <tr>
@@ -130,8 +130,12 @@
          <td>MAHEESH PATHIRANA</td>
          <td>81</td>
          <td>BOWLER</td>
-         <td><img src ="pathirana.png" height="200px" width="200px"></td>
+         <td><img src ="images/pathirana.png" height="200px" width="200px"></td>
+          </tr>
 
+          <tr>
+            <td>12</td>
+            <td></td>
           </tr>
 </body>
 </html>
