--- a/surya project3.html
+++ b/surya project3.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+<html>
+  <head>
+    <style>
+      .center{
+        margin-auto
+      }
+    </style>
+  </head>
 <body>
-  <script>
-    function msd(swap) {
-      var pics;
-      if(swap==0){
-      pics='images\try1.jpg'
-      
-    }
-    else{
-      pics ='images\try2.avif'
-    }
-    document.getElementById('gfg').src =pics;
-    }
-  </script>
-  <img id="gfg"src=""height="500px">
-  <p>
-    <button style="font-size: xx-large;" type="button" onclick="msd(0)">helicoptter shot</button>
-  </p>
-  <p><button style="font-size: xx-large;" type="button"  onclick="msd(1)">six</button>
-    </p>
-  
+
+<h1>PIKACHU</h1>
+<p><h1>PIKACHU IS VERY BEAUTIFUL.</h1></p>
+
+<script>
+function pika(sw) {
+  var pic;
+  if (sw == 0) {
+    pic = "pika22.gif"
+  } else {
+    pic = "pikka_23.gif"
+  }
+  document.getElementById('pika').src = pic;
+}
+</script>
+
+<img id="pika" src="pikka_23.gif" height="50%" width="50%">
+
+<p>
+<button type="button" onclick="pika(1)">pika freustation</button>
+<button type="button" onclick="pika(0)">pika harmony</button>
+</p>
+
+
+
 </body>
 </html>
+
