--- a/surya_oun_try1.html
+++ b/surya_oun_try1.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
 <body>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">  
-    <img src="" alt="">
+
+<iframe width="420" height="345" src="https://www.youtube.com/embed/v=Cvc-Kvi0e6E">
+</iframe>
+
 </body>
 </html>
+
