--- a/surya_profile.html
+++ b/surya_profile.html
@@ -28,24 +28,49 @@
         </h1>
     </center>
     <img src="images\arish.jpg" height=10%" width="10%">
-    <h1>
-        
-    </h1>
+    <pre> <h1>
+        IF NEED HELP CALL FOR ME
+            9751673846
+    </h1></pre>
+    <pre>
+        <h2>
+        formel web
+        suryaarish@gmail.com
+        </h2>
+    </pre>
+
+
     <h2>
         EDUCATION
     </h2>
 
+    <summary>
 
-     <h2>
-        ABOUT ME
-     </h2>
-<summary>
-        <h2>
-            I am a highly skilled and motivated professional with a strong passion for technology and a proven track record in the tech industry. With a Bachelor's degree in Computer Science applications from [tagore college, chennai] and [3] years of experience in [relevant tech roles], I bring a solid foundation in software development, problem-solving, and innovation.
-            Beyond technical expertise, I possess excellent communication skills, allowing me to effectively collaborate with stakeholders, present complex ideas to both technical and non-technical audiences, and facilitate seamless project coordination.<br>
-            As a forward-thinking individual, I am committed to continuous learning and staying updated with emerging technologies and industry trends. I am excited about the opportunity to contribute to the growth and innovation of your company by leveraging my technical acumen and passion for excellence
+        <p>
+        <h2> I am surya arish I have finished my high school from our co-opration school thats located in
+            ramanathapuram<br> i took government higher secondary school in year 2022-2023 .<br> i am really intrested
+            in computers so i have <br>
+            taken computer application degree (BCA) in tagore college located in chromepet,chennai</p>
         </h2>
-        </summary>
+        </p>
+    </summary>
+    <h2>
+        ABOUT ME
+    </h2>
+    <summary>
+        <h2>
+            I am a highly skilled and motivated professional with a strong passion for technology and a proven track
+            record in the tech industry. With a Bachelor's degree in Computer Science applications from [tagore college,
+            chennai] and [3] years of experience in [relevant tech roles], I bring a solid foundation in software
+            development, problem-solving, and innovation.
+            Beyond technical expertise, I possess excellent communication skills, allowing me to effectively collaborate
+            with stakeholders, present complex ideas to both technical and non-technical audiences, and facilitate
+            seamless project coordination.<br>
+            As a forward-thinking individual, I am committed to continuous learning and staying updated with emerging
+            technologies and industry trends. I am excited about the opportunity to contribute to the growth and
+            innovation of your company by leveraging my technical acumen and passion for excellence
+        </h2>
+    </summary>
     </h2>
 
 
