--- a/surya project4.html
+++ b/surya project4.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         head {
-            text-align: center;
+            text-align:center;
         }
 
         input {
@@ -16,7 +16,7 @@
         }
 
         form {
-            text-align: center;
+            text-align:left;
         }
 
         div {
@@ -31,13 +31,13 @@
 
     <form action="/action_page.php">
 
-        <input type="radio" id="tamil" name="fav_language" value="tamil"><br>
+        <input type="radio" id="tamil" name="fav_language" >
           <label for="tamil">Tamil</label><br>
-          <input type="radio" id="maths" name="fav_language" value="computer"><br>
+          <input type="radio" id="maths" name="fav_language" value="computer">
           <label for="computer">Computer</label><br>
-          <input type="radio" id="chemistry" name="fav_language" value="chemistry"><br>
+          <input type="radio" id="chemistry" name="fav_language" value="chemistry">
           <label for="chemistry">Chemistry</label><br>
-        <input type="radio" id="physics" name="fav_language" value="physics"><br>
+        <input type="radio" id="physics" name="fav_language" value="physics">
 
 
         <label for="physics">Physics</label><br>
