--- a/surya_profile.html
+++ b/surya_profile.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="jpg" href="images/fav_icon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
      , initial-scale=1.0">
-    <title>SURYA PROFILE</title>
+    <title>
+        surya_profile
+    </title>
     <style>
         h1 {
             text-align: center;
@@ -28,14 +31,16 @@
         </h1>
     </center>
     <img src="images\arish.jpg" height=10%" width="10%">
-    <pre> <h1>
-        IF NEED HELP CALL FOR ME
-            9751673846
-    </h1></pre>
+
     <pre>
         <h2>
-        formel web
-        suryaarish@gmail.com
+       <img src="images/web_ic.png"  height="30px" width="30px">  formal.com
+
+       <img src="images/loca_ic.webp" height="40px" width="40px"> 7/1011 middle  street Alagankulam
+             Ramanathapuram
+
+       <img src="images/email_ic.jpg" height="30px" width="30px" > suryaarish@gmail.com
+
         </h2>
     </pre>
 
@@ -72,6 +77,13 @@
         </h2>
     </summary>
     </h2>
+    <pre> <h1>
+
+        <img src="images/caller_ic.png" height="60px" width="60px"> 
+        IF NEED HELP CALL FOR ME
+        
+            9751673846
+    </h1></pre>
 
 
 </body>
