--- a/surya_profile.html
+++ b/surya_profile.html
@@ -10,6 +10,7 @@
         surya_profile
     </title>
     <style>
+        h1{font-size: 50px;}
         h1 {
             text-align: center;
         }
@@ -27,7 +28,7 @@
 <body>
     <center>
         <h1>
-            SURYA PROFILE
+         <img src="images/fav_icon.png"  height="120px" width="120x">  SURYA PROFILE
         </h1>
     </center>
     <img src="images\arish.jpg" height=10%" width="10%">
@@ -81,7 +82,7 @@
 
         <img src="images/caller_ic.png" height="60px" width="60px"> 
         IF NEED HELP CALL FOR ME
-        
+
             9751673846
     </h1></pre>
 
