--- a/surya_profile.html
+++ b/surya_profile.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" type="jpg" href="images/fav_icon.png">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
+    <meta name="viewport" content="width=69%
      , initial-scale=1.0">
     <title>
         surya_profile
