--- a/forms.html
+++ b/forms.html
@@ -19,17 +19,15 @@
             text-align:left;
         }
 
-        div {
-            font-size: 50%;
-        }
-
         center{font-size: xx-large;}
     </style>
 </head>
 
 <body>
 <center>
-    <h2>FAVORITE LANGUAGE AND UNFAVORATE</h2>
+    <h2>
+FORM
+    </h2>
 </center>
     <form >
         <h2>
@@ -60,7 +58,11 @@
         <lable for="arun"> Arun</lable> <br>
         <input type="checkbox" id="sam" name="fav_friend">
         <lable for="sam"> Sam </lable><br>
-
+        <input type="checkbox" id="kot" name="fav_friend">
+        <label for="kot" >Kot</label> <br>
+<h2>
+    Text
+</h2>
 
        
         <label for="text">First name:</label><br>
@@ -68,19 +70,10 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="mazz"><br>
         <label for="mname">middle name:</label><br>
-        <input type="text" id="mname" name="mname" value="sakthi"><br><br><br>
-        <div>
-
-
-
-
-
-
-
-
-
-            <input type="submit" value="Submit">
-        </div>
+        <input type="text" id="mname" name="mname" value="sakthi"><br>
+        <pre>
+                                          <input type="submit" value="Submit" >
+</pre>
     </form>
 <p><h1>This is the last project before my college opening Date</h1> </p>
 </body>
