--- a/forms.html
+++ b/forms.html
@@ -30,12 +30,18 @@ FORM
     </h2>
 </center>
     <form >
-        <h2>
-            Radio
-        </h2>
+        <label for="fname"> Name:</label>
+        <input type="text" name="fname" id="fname"><br>
+        <label for="password"> Password:</label>
+        <input type="text" name="password"  id="pwd"><br>
 
-        <input type="radio" id="Maaz" name="maaz">
-        <label for="Maaz" >Maaz</label> <br>
+
+        <label for="file"> Enter Your File</label>
+        <input type="file" name="file" id="file">
+     
+        <h2> 
+            Which is Youre Favorate Subject
+        </h2>
 
         <input type="radio" id="tamil" name="fav_language">
         <label for="tamil">Tamil</label><br>
@@ -47,7 +53,7 @@ FORM
         <label for="physics">Physics</label><br>
 
         <h2>
-            checkbox
+            Whose Your Favorate Friend
         </h2>
 
         <input type="checkbox" id="mazz" name="fav_friend">
@@ -65,17 +71,19 @@ FORM
 </h2>
 
        
-        <label for="text">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="surya"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="mazz"><br>
-        <label for="mname">middle name:</label><br>
-        <input type="text" id="mname" name="mname" value="sakthi"><br>
+        <label for="text">What is Youre Name:</label><br>
+        <input type="text" id="fname" name="fname" ><br>
+        <label for="lname">How Old Are You:</label><br>
+        <input type="text" id="lname" name="lname" ><br>
+        <label for="mname">What is Youre  Native Country :</label><br>
+        <input type="text" id="mname" name="mname" ><br>
         <pre>
+            <h1>
                                           <input type="submit" value="Submit" >
+                                          </h1>
 </pre>
     </form>
-<p><h1>This is the last project before my college opening Date</h1> </p>
+
 </body>
 
 </html>
