--- a/forms.html
+++ b/forms.html
@@ -37,12 +37,12 @@
 FORM
     </h2>
 </center>
-    <form >
+   form >
         <fieldset>
             <legend>Personalia:</legend>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname" ><br>
-            <label for="lname">Last name:</label><br>
+            <label for="lname">Last nam <e:</label><br>
             <input type="text" id="lname" name="lname"><br><br>
          
         
@@ -105,7 +105,7 @@ FORM
 
 <h1>
     Which is Youre Favorate Browser
-</h1>
+</h1> 
 
 
          <label for="browsers">Search Your Browsers
