--- a/surya_oun_try1.html
+++ b/surya_oun_try1.html
@@ -1,46 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <style>
-       body{background-color: black;}
-       body{
-        background-image: linear-gradient(to right,red,yellow,red,yellow,red,yellow,red,yellow);
-       }
-    </style>
+<head>
+<style>
+div.absolute  {
+  position: relative;
+  width: 400px;
+  height: 200px;
+  border: 3px solid #73AD21;
+} 
+
+div.{
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
+}
+</style>
+</head>
 <body>
 
-<svg height="1000" width="1000">
-  <defs>
-    <linearGradient id="grad1" x1="10%" y1="10%" x2="100%" y2="0%">
-        <stop offset="0%"
-      style="stop-color:rgb(230, 226, 13);stop-opacity:1" />
-      <stop offset="10%"
-      style="stop-color:rgb(255, 0, 0);stop-opacity:1" />
-      <stop offset="20%"
-      style="stop-color:rgb(255, 191, 15);stop-opacity:1" />
-      <stop offset="30%"
-      style="stop-color: rgb(255, 0, 0);stop-opacity:1" />
-      <stop offset="40%"
-      style="stop-color:rgb(251, 255, 0);stop-opacity:1" />
-      <stop offset="50%"
-      style="stop-color:rgb(255, 0, 0);stop-opacity:1" />
-      <stop offset="60%"
-      style="stop-color:rgb(255, 0, 0);stop-opacity:1" />
-      <stop offset="70%"
-      style="stop-color:rgb(255, 238, 0);stop-opacity:1" />
-      <stop offset="80%"
-      style="stop-color:rgb(255, 0, 0);stop-opacity:1" />
-      <stop offset="90%"
-      style="stop-color:rgb(251, 255, 0);stop-opacity:1" />
-      <stop offset="90%"
-      style="stop-color:rgb(255, 0, 0);stop-opacity:1" />
-      
-    </linearGradient>
-  </defs>
-  <circle cx="200" cy="200" r="200"   fill="url(#grad1)"/>
-  <text fill="dark red" font-size="50" font-family="varenda"  x="50" y="86">SURYA  ARISH</text>
-Sorry, your browser does not support inline SVG.
-</svg>
-folder
+<h2>position: absolute;</h2>
+
+<p>An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed):</p>
+
+<div class="relative">This div element has position: relative;
+  <div class="absolute">This div element has position: absolute;</div>
+</div>
+
 </body>
 </html>
-
