--- a/surya project3.html
+++ b/surya project3.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <style>
+      body{
+        background-color: aqua;
+      }
       .center{
         margin-auto
       }
+      {}
     </style>
   </head>
 <body>
