--- a/surya_oun_try1.html
+++ b/surya_oun_try1.html
@@ -1,33 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-div.absolute  {
-  position: relative;
-  width: 400px;
-  height: 200px;
-  border: 3px solid #73AD21;
-} 
-
-div.{
-  position: absolute;
-  top: 80px;
-  right: 0;
-  width: 200px;
-  height: 100px;
-  border: 3px solid #73AD21;
-}
-</style>
+<title>Font Awesome Icons</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://kit.fontawesome.com/2d4cdd3cc5.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
+<!--Get your own code at fontawesome.com-->
 </head>
 <body>
 
-<h2>position: absolute;</h2>
+<h1>Font Awesome icon library</h1>
 
-<p>An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed):</p>
+<p>Some Font Awesome icons:</p>
+<i class="fas fa-cloud"></i>
+<i class="fas fa-heart"></i>
+<i class="fas fa-car"></i>
+<i class="fas fa-file"></i>
+<i class="fas fa-bars"></i>
 
-<div class="relative">This div element has position: relative;
-  <div class="absolute">This div element has position: absolute;</div>
-</div>
+<p>Styled Font Awesome icons (size and color):</p>
+<i class="fas fa-cloud" style="font-size:24px;"></i>
+<i class="fas fa-cloud" style="font-size:36px;"></i>
+<i class="fas fa-cloud" style="font-size:48px;color:red;"></i>
+<i class="fas fa-cloud" style="font-size:60px;color:lightblue;"></i>
 
 </body>
 </html>
+
+
+
+<!-- <!DOCTYPE html>
+// <html>
+// <head>
+// <style>
+// div.absolute  {
+//   position: relative;
+//   width: 400px;
+//   height: 200px;
+//   border: 3px solid #73AD21;
+// } 
+
+// div.{
+//   position: absolute;
+//   top: 80px;
+//   right: 0;
+//   width: 200px;
+//   height: 100px;
+//   border: 3px solid #73AD21;
+// }
+// </style>
+// </head>
+// <body>
+
+// <h2>position: absolute;</h2>
+
+// <p>An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed):</p>
+
+// <div class="relative">This div element has position: relative;
+//   <div class="absolute">This div element has position: absolute;</div>
+// </div>
+
+// </body>
+// </html> -->
