--- a/my_first_wep.html
+++ b/my_first_wep.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
+    <link rel="stylesheet" href="my_first_web_co.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DHONI</title>
 </head>
 <body>
-    <h1>WHO IS THE BEST CAPTIAN OF THE WORLD </h1>
-   
-
+    <h1>
+        hdcvhkg
+    </h1>
 </body>
 </html>
-
-
-}
