--- a/forms_formel.html
+++ b/forms_formel.html
@@ -4,15 +4,15 @@
 <head>
     <link rel="stylesheet" href="form_formel.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire"> 
-  
+   
+    <link rel="stylesheet" href="Sofia_font\Sofia-Regular.ttf">
 </head>
 
 <body>
     
 <center>
     <h4 >
-First Form
+FORMEL FORM
     </h4>
 </center>
 
