--- a/surya project 2.html
+++ b/surya project 2.html
@@ -12,6 +12,9 @@
         border:5px solid black;
       text-align: center;
     ;}
+    img{
+      opacity: 0.9;
+    }
  tr:hover{background-color:rgb(255, 208, 0);}
     h1{text-align: center;}
     h1{font-family: 'Times New Roman', Times, serif;}
@@ -126,7 +129,7 @@
 
           <tr>
          <td>11</td>
-         <td>81</td>
+         <td>19</td>
          <td>MAHEESH PATHIRANA</td>
          <td>81</td>
          <td>BOWLER</td>
