--- a/surya_oun_try1.html
+++ b/surya_oun_try1.html
@@ -11,19 +11,9 @@
 
 <h1>Font Awesome icon library</h1>
 
-<p>Some Font Awesome icons:</p>
-<i class="fas fa-cloud"></i>
-<i class="fas fa-heart"></i>
-<i class="fas fa-car"></i>
-<i class="fas fa-file"></i>
-<i class="fas fa-bars"></i>
-
-<p>Styled Font Awesome icons (size and color):</p>
-<i class="fas fa-cloud" style="font-size:24px;"></i>
-<i class="fas fa-cloud" style="font-size:36px;"></i>
-<i class="fas fa-cloud" style="font-size:48px;color:red;"></i>
-<i class="fas fa-cloud" style="font-size:60px;color:lightblue;"></i>
-
+<p>EHTAS APP LOGO:</p>
+<i class="fa-brands fa-square-whatsapp"></i>
+<i class="fa-solid fa-traffic-light"></i>
 </body>
 </html>
 
