--- a/css_try.html
+++ b/css_try.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="html_homework\css_try.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <style>
+        body {
+            background-color: bisque;
+        }
+
+        div {
+            /* position: absolute;
+
+            right: 40px; */
+            float: right;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>WHO IS THE BEST CAPTIAN OF THE WORLD </h1>
-   
-
+    <div>
+        <span class="material-symbols-outlined">
+            home
+        </span>
+        <span class="material-symbols-outlined">
+            delete_sweep
+        </span>
+        <span class="material-symbols-outlined">
+            saved_search
+        </span>
+    </div>
 </body>
+
 </html>
-
-
-}
