--- a/surya project 2.html
+++ b/surya project 2.html
@@ -138,7 +138,9 @@
 
           <tr>
             <td>12</td>
-            <td></td>
+            <td>78</td>
+            <td>MUKESH CHOUNDARY</td>
+            <tr></tr>
           </tr>
 </body>
 </html>
