--- a/surya_profile.html
+++ b/surya_profile.html
@@ -31,7 +31,7 @@
          <img src="images/fav_icon.png"  height="120px" width="120x">  SURYA PROFILE
         </h1>
     </center>
-    <img src="images\arish.jpg" height="20%" width="20%">
+    <img src="images/arish.jpg" height="20%" width="20%">
 
     <pre>
         <h2>
